Fix horizontal scroll on mobile episode list

--- a/css/style.css
+++ b/css/style.css
@@ -1537,6 +1537,7 @@ div#content {
 
     .episodes {
         padding: 0;
+        overflow-x: hidden;
     }
 
     .episode {
